<resources>
    <string name="app_name">ProovIt</string>
    <string name="title_home">Home</string>
    <string name="welcome1">Witaj w aplikacji</string>
    <string name="welcome2">ProvIt</string>
    <string name="login_in_please">Zaloguj się</string>
    <string name="login">nazwa użytkownika :</string>
    <string name="click">KLIKNIJ</string>
    <string name="pass">hasło :</string>
    <string name="channel_name">Prove It Channel</string>
    <string name="channel_description">Prove It Description</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_flag">Raportuj</string>
    <string name="title_flagged">Zgłoszone</string>
    <string name="title_rank">Ranking</string>
    <string name="title_activity_check">Zweryfikuj Fake\'a</string>
    <string name="check_main">Fake zweryfikowany</string>

    <string name="check_address">URL Of the Site</string>
    <string name="check_reason_title">Powód :</string>
    <string name="check_reason_text">Reason of Report</string>
    <string name="accessibility_description">chrome_retriever</string>
    <string name="accessibility_title">my_accessibility</string>

    <string name="report_link">www.placeholder.pl</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reportedByMe">Zgłoszone przeze mnie :</string>
    <string name="report">Raportuj</string>
    <string name="reportedByOthers">Zgłoszone przeze innych :</string>
    <string name="whyFake">Dlaczego zgłaszasz?</string>
    <string name="writeReason">Tutaj podaj powód</string>
    <string name="or">lub</string>
    <string name="link">Link :</string>
    <string name="rank">Ranking Użytkowników</string>


    <string name="shareOnFacebook">Podziel się na FB</string>
    <string name="fakeFound">Znalazłem nieprawdziwą informację!</string>


    <!--Facebook-->
    <string name="facebook_app_id">883075032041600</string>
    <string name="fb_login_protocol_scheme">fb883075032041600</string>

    <!--Article API-->
    <string name="articleAlreadyReported">Artykuł obecny w bazie</string>
    <string name="articleNotReported">Artykuł nieobecny w bazie</string>
    <string name="numberOfReports">Liczba zgłoszeń:</string>

</resources>
