<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/backgroundSplashScreen"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/login_linear_logo"
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxHeight="100dp"
            android:background="@drawable/validation"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>
    <LinearLayout
        android:layout_marginTop="20dp"
        android:layout_below="@id/login_linear_logo"
        android:id="@+id/login_linear_title"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:gravity="center"
            android:textSize="32sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome1"/>
        <TextView
            android:gravity="center"
            android:textSize="32sp"
            android:fontFamily="@font/lato_bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:id="@+id/login_login_please"
        android:layout_below="@id/login_linear_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/login_in_please"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:paddingHorizontal="30dp"
        android:id="@+id/login_data"
        android:layout_below="@id/login_login_please"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/login_login"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:inputType="text"
            android:ems="15"
            android:background="@xml/edit_text_background"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pass"
            android:textSize="20sp"/>
        <EditText
            android:id="@+id/login_password"
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:textSize="20sp"
            android:inputType="textPassword"
            android:ems="15"
            android:background="@xml/edit_text_background"
            />
        <Button
            android:id="@+id/login_button"
            android:layout_marginTop="10dp"
            android:text="@string/login_in_please"
            android:fontFamily="@font/lato_bold"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="120dp"
            android:layout_height="55dp"
            />
    </LinearLayout>


</RelativeLayout>