<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSplashScreen"
    tools:context=".logic.ReportFakeActivity">

    <ImageButton
        android:id="@+id/imageButtonFacebook2"
        android:layout_width="63dp"
        android:layout_height="74dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/com_facebook_auth_dialog_cancel_background"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonTwitter"
        app:layout_constraintTop_toBottomOf="@+id/editTextReason"
        app:srcCompat="@drawable/com_facebook_button_icon_blue" />

    <TextView
        android:id="@+id/textViewReport"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/report"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="53dp"
        android:layout_height="55dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/backgroundSplashScreen"
        android:scaleType="fitXY"
        android:src="@drawable/validation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReport"
        app:srcCompat="@drawable/truefalse" />

    <ImageButton
        android:id="@+id/imageButtonWhatsapp"
        android:layout_width="63dp"
        android:layout_height="74dp"
        android:background="@drawable/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="@+id/editTextReason"
        app:layout_constraintTop_toTopOf="@+id/imageButtonTwitter"
        app:srcCompat="@drawable/whattsapp" />

    <ImageButton
        android:id="@+id/imageButtonTwitter"
        android:layout_width="63dp"
        android:layout_height="74dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/transparent"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonWhatsapp"
        app:layout_constraintTop_toTopOf="@+id/imageButtonFacebook2"
        app:srcCompat="@drawable/twitter" />

    <Button
        android:id="@+id/buttonReport"
        android:layout_width="wrap_content"
        android:layout_height="74dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="68dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/report"
        android:textAlignment="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textViewOr" />

    <EditText
        android:id="@+id/editTextReason"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/writeReason"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/buttonReport"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLink" />

    <TextView
        android:id="@+id/textViewReason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:text="@string/whyFake"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textViewOr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/or"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageButtonWhatsapp"
        app:layout_constraintEnd_toStartOf="@+id/imageButtonFacebook2"
        app:layout_constraintTop_toBottomOf="@+id/editTextReason"
        app:layout_constraintVertical_bias="0.454" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/link"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewReason" />

    <TextView
        android:id="@+id/textViewLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="www.placeholder.pl"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView5" />
</android.support.constraint.ConstraintLayout>