<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundSplashScreen"
    >

    <RelativeLayout
        android:id="@+id/report_linear_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/report_user_button"
            android:layout_width="53dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/backgroundSplashScreen"
            android:scaleType="fitXY"
            android:src="@drawable/user"
            android:layout_toLeftOf="@+id/report_legend"
            />
        <ImageButton
            android:id="@+id/report_legend"
            android:layout_width="53dp"
            android:layout_height="55dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:background="@color/backgroundSplashScreen"
            android:scaleType="fitXY"
            android:src="@drawable/chevron1"
            android:layout_alignParentRight="true"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/report_linear_logo"
        android:id="@+id/report_linear_title">
        <TextView
            android:id="@+id/textViewReport"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="@font/lato_bold"
            android:text="@string/report"
            android:textSize="34sp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/report_linear_title"
        android:id="@+id/report_linear_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/validation" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="15dp"
        android:id="@+id/check_linear_why_reporting"
        android:layout_below="@id/report_linear_validation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/textViewReason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/whyFake"
            android:textSize="24sp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="25dp"
        android:layout_below="@id/check_linear_why_reporting"
        android:id="@+id/check_linear_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_marginStart="25dp"
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/link" />

        <EditText
            android:id="@+id/editTextLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/check_linear_link"
            android:layout_marginStart="29dp"
            android:layout_marginEnd="81dp"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/report_linear_edit_text"
        android:layout_below="@+id/check_linear_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>
        <EditText
            android:layout_weight="3"
            android:id="@+id/editTextReason"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:text="@string/writeReason"
            android:ems="10"
            android:inputType="textPersonName"

            android:textAlignment="center"
            android:textStyle="italic" />
        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/report_linear_bottom"
        android:layout_below="@id/report_linear_edit_text">

        <LinearLayout
            android:layout_marginStart="40dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <Button
                android:id="@+id/buttonReport"
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:layout_gravity="center_horizontal"
                android:ellipsize="none"
                android:fontFamily="@font/lato_bold"
                android:text="@string/report"
                android:textAlignment="center" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="fill_horizontal"
                android:gravity="center"
                android:id="@+id/textViewOr"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/or"
                android:textSize="24sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_marginEnd="30dp">

            <ImageButton
                android:id="@+id/imageButtonFacebook2"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_height="40dp"
                android:layout_gravity="center_vertical"
                android:adjustViewBounds="true"
                android:background="@drawable/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/facebook" />
            <ImageButton
                android:layout_weight="1"
                android:id="@+id/imageButtonWhatsapp"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:background="@drawable/transparent"
                android:scaleType="fitCenter"
                android:adjustViewBounds="true"
                android:layout_marginEnd="5dp"
                app:srcCompat="@drawable/whatsapp" />

            <ImageButton
                android:layout_gravity="center_vertical"
                android:id="@+id/imageButtonTwitter"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="40dp"
                android:adjustViewBounds="true"
                android:background="@drawable/transparent"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/twitter" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>